# rolodex-dns

./: .containerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.build  LICENSE  Makefile  README.md  build.rs  dev.toml  dev.yml  functional.md
benches/: dns_perf.rs
extension/: README.md  ca_dns.js  eslint.config.js  manifest.json  popup.html  popup.js
go/: client.go  client_test.go  go.mod  integration_test.go
go/rolodexdnspb/: rolodex_dns.pb.go  rolodex_dns_grpc.pb.go
go/rolodexpb/: rolodex.pb.go  rolodex_grpc.pb.go
js/: README.md  eslint.config.js  package-lock.json  package.json
js/src/: dane.js  index.js  portal.js  ui_server.js
js/test/: ca_dns_integration.test.js  dane.test.js  extension.test.js  integration.test.js  portal.test.js  server_helper.js  ui.test.js
js/test/fixtures/: cert.pem  cert2.pem  expected.json  intermediate.pem  key.pem  key2.pem
js/ui/: index.html
make/: amd64-vm.sh  build.sh  lib.sh
proto/: rolodex.proto  rolodex_dns.proto
scripts/: rolodex-dns01-hook.sh
src/: acme.rs  acme_jose.rs  acme_server.rs  ca.rs  config.rs  dane.rs  db.rs  dhcp.rs  dns_cache.rs  dns_server.rs  dnssec.rs  doh_proxy.rs  doh_server.rs  doq_server.rs  dot_server.rs  edns.rs  grpc_service.rs  lib.rs  main.rs  portal.html  portal.rs  rbl.rs  resolver.rs  secure_client.rs  tls.rs  ttl_drift.rs
tests/: acme_issuer_test.rs  auto_resolution_test.rs  cli_integration_test.rs  dhcp_integration_test.rs  integration_test.rs  new_features_test.rs
