[package]
name = "rolodex"
version = "0.1.0"
edition = "2024"
description = "A split-horizon DNS server and forwarding resolver with gRPC management"

[dependencies]
# DNS
domain = { version = "0.11", features = ["std", "bytes", "resolv"] }
hickory-resolver = { version = "0.25", features = ["system-config", "tokio"] }
hickory-proto = "0.25"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
bytes = "1"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
mockall = "0.13"
